tests/NormalTests/paczka1/fuzzy1/59626926.err
Error in line 3: TjSM A360 14,2
Error in line 4: A360 A36 92,4
Error in line 16: Vzxu0hQIGwe A369 9,0
Error in line 24: A360 A309 41,8
